--- a/pom.xml
+++ b/pom.xml
@@ -256,7 +256,8 @@
             com.snaplogic.snaps.FileOrDirectoryReadODelete,
             com.snaplogic.snaps.PropertyTypes,
             com.snaplogic.snaps.ExpressionSnap,
-            com.snaplogic.snaps.LookupSnap
+            com.snaplogic.snaps.LookupSnap,
+            com.snaplogic.snaps.InputSchemaSnap
         </snap.classes>
         <!-- This identifies the classes which represent the actual Accounts
             (and become accessible on the Snaplex/JCC after deployment).
